/*
 * $Id: ChangeLog,v 1.4290 2005/09/01 18:46:34 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-09-02 00:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
  * makefile.vc
  * hrbdll.vc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.pc
    + source/rtl/pcre/*

2005-09-01 11:37 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    % Few optimizations related to hb_vmPushString() followed by hb_xfree()
    * [Hopefully] Completed support for operator overloading, including native types.

  /* NOTE: Operator Overloading
           --------------------

    1. When an operator has 2 arguments only the the LEFT side may overload the operation.

    2. NATIVE COMPATABILITY of operands PRECEDEs Operator Overloading declarations.
       This means that when the operation can be performed withOUT an error, overloading
       is NOT intended to take place, and will be ignored.
   */

2005-09-01 15:04 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/Makefile
    * forgot to commit its changes to use pcre/

2005-09-01 10:01 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * config/os2/gcc.cf
    * modified to add pcrepos.a library to linklist

2005-08-31 23:40 UTC-0300 Luiz Rafael Culik<culikr at uol.com.br>
  * source/tip/encoding/base64.c
  * source/tip/encoding/uuencode.c
  * source/tip/encb64.prg
    ! Fixed problem when doing base64 encoding on mt programs
      Reported by Rodrigo Moreno

2005-08-29 17:31 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbexprb.c
  * source/compiler/exproptb.c
    - Removed optimization of INT + <x> into <x> <INT> HB_P_ADDINT, in hb_compExprUsePlus()
      because 1 + "A" is not same as "A" + 1

  * source/vm/hvm.c
    ! Fixed hb_vmPlus() to seperate handling of INT + <String(1)> from <String(1)> + <INT>
